--- a/react-portfolio-master/package.json
+++ b/react-portfolio-master/package.json
@@ -2,6 +2,10 @@
   "name": "personalportfolio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.18.2",
+    "npm": "6.14.5"
+  },
   "dependencies": {
     "jquery": "^3.5.1",
     "react": "^16.13.1",
